# gobernanza-agentes-verificada

./: CONTRATO_DETECTOR.md  LICENSE  README.md  SPEC_CI_Gate.md  UPGRADE.md  ci_gate.py  install.md  pyproject.toml  requirements.txt  test_ci_gate.py
.github/workflows/: ci.yml
config/: audit_trail.yaml  corpus_conventions.yaml  exentas.yaml  invariantes.yaml  routing_paths.yaml  umbrales.yaml
contrato/: result_contract.py
detectores/: audit_chain.py  gate_routing.py  lint_corpus.py  panel_salud.py  result_envelope.py
gate/: generar_fixtures_audit.py  run_gate.py  test_audit_trail.py  test_colision_parcial_config.py  test_gate2_cli_y_lint.py  test_install_sincronizado.py  verificador_minimo.py
gate/fixtures/audit/integra/: trail.jsonl
gate/fixtures/audit_limite/05_cola_truncada/: esperado.txt  trail.jsonl
gate/fixtures/audit_rotas/01_entrada_alterada/: esperado.txt  trail.jsonl
gate/fixtures/audit_rotas/02_enlace_roto/: esperado.txt  trail.jsonl
gate/fixtures/audit_rotas/03_reordenada/: esperado.txt  trail.jsonl
gate/fixtures/audit_rotas/04_secuencia_hueco/: esperado.txt  trail.jsonl
gate/fixtures/audit_rotas/06_linea_corrupta/: esperado.txt  trail.jsonl
gate/fixtures/limpias/: MEMORY.md  Registro_Enjambres.md  envelope_ok.json  esperado.txt
gate/fixtures/limpias/rag/: Guia-Gamma.md  Guia_Alfa.md  Guia_Beta.md
gate/fixtures/limpias/skills/skill-alfa/: SKILL.md
gate/fixtures/limpias/skills/skill-beta/: SKILL.md
gate/fixtures/rotas/01_skill_invisible/: Registro_Enjambres.md  esperado.txt
gate/fixtures/rotas/02_colision_routing/: Registro_Enjambres.md  esperado.txt
gate/fixtures/rotas/03_wikilink_roto/: MEMORY.md  esperado.txt
gate/fixtures/rotas/04_envelope_blocked_sin_summary/: envelope.json  esperado.txt
gate/fixtures/rotas/05_status_invalido/: envelope.json  esperado.txt
gate/fixtures/rotas/06_colision_routing_parcial/: Registro_Enjambres.md  esperado.txt
gate/fixtures/rotas/06_mdlink_roto/: MEMORY.md  esperado.txt
gate/fixtures/rotas/07_abspath_portabilidad/: MEMORY.md  esperado.txt
gate/fixtures/rotas/08_ragsec_rag_inexistente/: Registro_Enjambres.md  esperado.txt
gate/fixtures/rotas/09_abspath_midline/: MEMORY.md  esperado.txt
gate/fixtures/rotas/10_mdlink_basename_falso/: MEMORY.md  esperado.txt
gate/fixtures/rotas/11_wikilink_carpeta/: MEMORY.md  esperado.txt
gobernanza/: README.md  deferencias_sesion_ejemplo.json  metricas_gobernanza.py  test_metricas_gobernanza.py
motor/: audit_trail.py  config_loader.py  runner.py  snapshot.py  veredicto.py
pilot_result_contract/: arnes_ciego.py  envelope_schema.py
pilot_result_contract/casos_reales/: malformado_01_enum_inventado.md  malformado_02_falta_next.md  malformado_03_blocked_summary_telegrafico.md  real_01_audiencias_prevision_OK.md  real_02_marketer_landing_BLOCKED.md  real_03_marketer_hero_WARN.md  real_04_audiencias_atribucion_WARN_HIGH.md  real_05_extractor_factura_OK.md
(+8 files in other folders)
