# pyproject.toml — empaquetado del kit.
#
# Version 1.0.0.
# La dependencia PyYAML replica EXACTAMENTE el pin de requirements.txt: una sola fuente de
# verdad del rango. Si se cambia alli, cambiarlo aqui, y viceversa.
#
# LICENCIA: Apache-2.0 (permisiva, con concesion de patentes y proteccion de marca).
# Texto completo en el fichero LICENSE.

[project]
name = "agent-governance-checks"
version = "1.0.0"
description = "Verificadores deterministas (sin LLM) de routing y corpus para sistemas de agentes/skills: gate_routing, lint_corpus, panel_salud, result_contract y audit_chain."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "License :: OSI Approved :: Apache Software License",
]
dependencies = [
    "PyYAML>=5.4,<7.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
# El kit se distribuye como árbol de módulos (motor/, detectores/, contrato/), no
# como paquete único con __init__.py; se enumeran explícitos para que un
# `pip install .` no auto-descubra gate/fixtures ni carpetas de proceso.
packages = []
py-modules = []
